// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`at-rule alone 1`] = `
"
      .a {
    @media (min-width: 5px) { color: hotpink
    } }
  "
`;

exports[`at-rules alone (inverse order) 1`] = `
"
        .a {
    @support (display: flex) {
      @media (min-width: 50px) { color: red
      }
    } }
  "
`;

exports[`at-rules alone 1`] = `
"
        .a {
    @media (min-width: 50px) {
      @support (display: flex) { color: red
      }
    } }
  "
`;

exports[`big mess 1`] = `
"
    .a { color: red; }
    .a { color: orange;

    @media (min-width: 3em) {
        color: green
    }

    @media (min-width: 50px) {
      @support (display: flex) { color: red
      }
    }

    @media (min-width: 50px) { color: red
    }

    @support (display: flex) {
      @media (min-width: 50px) { color: red
      }
    } }
    .b { color: blue;

    @media (min-width: 3em) {
        color: yellow
    } }

    .c, .d { color: red }

    .c {

    @media (min-width: 50px) { color: hotpink
    } }

    .d {

    @media (min-width: 50px) { color: hotpink
    } }
  "
`;

exports[`compound selectors 1`] = `
"
    .a, .b { color: red; }
    .a {
    @media (min-width: 5px) { color: hotpink
    } }
  "
`;

exports[`leaves rules untouched 1`] = `
"
    .a {
      color: red;
    }
  "
`;

exports[`many occourences 1`] = `
"
    .a { color: red; }
    .a { color: orange;

    @media (min-width: 3em) {
        color: green
    } }
    .b { color: blue;

    @media (min-width: 3em) {
        color: yellow
    } }
  "
`;

exports[`merges with existing ones 1`] = `
"
    .a { color: blue;
    @media (min-width: 3em) {
        display: block
    } }
  "
`;

exports[`multiple rules 1`] = `
"
    .a { color: red;
    @media (min-width: 5px) { color: hotpink
    } }
    .b {
    @media (min-width: 5px) { color: green
    } }
  "
`;

exports[`nested at-rules 1`] = `
"
    .a { display: block;
    @media (min-width: 50px) {
      @support (display: flex) { color: red
      }
    } }
  "
`;

exports[`simple 1`] = `
"
    .a { color: red;
    @media (min-width: 5px) { color: hotpink
    } }
  "
`;
